--- a/x11dotnet/x11dotnet.csproj
+++ b/x11dotnet/x11dotnet.csproj
@@ -8,6 +8,9 @@
   <ItemGroup>
     <ProjectReference Include="../modules/X11.Net/X11/X11.csproj" />
     <!-- <PackageReference Include="X11" Version="1.0.6" /> -->
+    <PackageReference Include="Tmds.DBus" Version="0.5.0" />
+    <DotNetCliToolReference Include="Tmds.DBus.Tool" Version="0.5.0" />
+
   </ItemGroup>
 
 </Project>
